// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Heading Heading 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0>*:not(style)~*:not(style) {
  margin-top: 4px;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  font-size: 4xl;
  font-size: 5xl;
  font-size: 8vw;
  font-size: 6vw;
  color: gray.800;
  text-align: center;
}

.emotion-3 {
  font-size: 4xl;
  font-size: 5xl;
  font-size: 8vw;
  font-size: 6vw;
  color: brand.800;
  text-align: center;
}

.emotion-5 {
  font-size: 3xl;
  font-size: 4xl;
  font-size: 6xl;
  color: gray.800;
  text-align: center;
}

.emotion-6 {
  font-size: 3xl;
  font-size: 4xl;
  font-size: 6xl;
  color: brand.800;
  text-align: center;
}

<div
  className="chakra-stack emotion-0"
>
  <div
    className="emotion-1"
  >
    <h1
      className="chakra-heading emotion-2"
    >
      Photo
      <span
        className="chakra-heading emotion-3"
      >
        wall
      </span>
    </h1>
  </div>
  <div
    className="emotion-1"
  >
    <h2
      className="chakra-heading emotion-5"
    >
      Photo
      <span
        className="chakra-heading emotion-6"
      >
        wall
      </span>
    </h2>
  </div>
</div>
`;

exports[`Storyshots Common/Heading Interactive Heading 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  font-size: 4xl;
  font-size: 5xl;
  font-size: 8vw;
  font-size: 6vw;
  color: gray.800;
  text-align: center;
}

.emotion-2 {
  font-size: 4xl;
  font-size: 5xl;
  font-size: 8vw;
  font-size: 6vw;
  color: brand.800;
  text-align: center;
}

<div
  className="emotion-0"
>
  <h1
    className="chakra-heading emotion-1"
  >
    Photo
    <span
      className="chakra-heading emotion-2"
    >
      wall
    </span>
  </h1>
</div>
`;
